# navpathService

./: .Query.txt.kate-swp  .README.md.kate-swp  .gitignore  Cargo.toml  ImportSpreadSheet.xlsx  Query.txt  README.md  SQLDB.txt  collision_extractor.py  convert_dbtiles.py  convert_path.py  coords.txt  dbtiles.txt  dump_cell_coords.py  fixed.txt  import_xlsx_to_db.py  intraconnections.json  json_cleaner.py  load_tiles.py  migrate_tiles_regions.py  navmesh_builder.py  navmesh_builder_old.py  output_format_plan.md  result.json  result.txt  results.txt  results_parsed.json  rust-toolchain.toml  teleport_issue_analysis.md  tile_cleaner.py
.cargo/: config.toml
.spec-workflow/: session.json
.spec-workflow/approvals/astar-pathfinding/: approval_1759887267381_df5a3hvup.json  approval_1759929198082_ma14bd825.json  approval_1759929463616_mchyfgpct.json  approval_1759931313424_5ml5cpmjf.json
.spec-workflow/approvals/astar-pathfinding/.snapshots/design.md/: metadata.json  snapshot-001.json  snapshot-002.json
.spec-workflow/approvals/astar-pathfinding/.snapshots/requirements.md/: metadata.json  snapshot-001.json  snapshot-002.json  snapshot-003.json  snapshot-004.json
.spec-workflow/approvals/astar-pathfinding/.snapshots/tasks.md/: metadata.json  snapshot-001.json  snapshot-002.json
.spec-workflow/approvals/navmesh/: approval_1760117481019_tkf26mgjq.json  approval_1760119117638_3s91t4m8b.json  approval_1760119659963_8r4zya2p9.json
.spec-workflow/approvals/navmesh-astar/: approval_1760128484540_rnezljo9q.json
.spec-workflow/approvals/navmesh-astar/.snapshots/design.md/: metadata.json  snapshot-001.json  snapshot-002.json
.spec-workflow/approvals/navmesh-astar/.snapshots/requirements.md/: metadata.json  snapshot-001.json  snapshot-002.json
.spec-workflow/approvals/navmesh-astar/.snapshots/tasks.md/: metadata.json  snapshot-001.json  snapshot-002.json
.spec-workflow/approvals/navmesh/.snapshots/design.md/: metadata.json  snapshot-001.json  snapshot-002.json
.spec-workflow/approvals/requirements-aware-pathfinding/: approval_1759965838527_qj7ol2hcx.json  approval_1759967290585_0dhb0n72d.json  approval_1759967393527_wrpe38x86.json
.spec-workflow/specs/astar-pathfinding/: design.md  requirements.md  tasks.md
.spec-workflow/specs/navmesh/: design.md  requirements.md  tasks.md
.spec-workflow/specs/navmesh-astar/: design.md  requirements.md  tasks.md
.spec-workflow/specs/requirements-aware-pathfinding/: design.md  requirements.md  tasks.md
docs/: missing_metadata.md  navmesh_db_schema.md  navpath-core.md  navpath-service-analysis.md  navpath-service.md  navpath_service.md  optimization_audit_4m_scale.md  optimization_roadmap_v2.md  performance_improvement_plan.md  performance_optimizations.md  tiles_nodes_schema.md
docs/forImplementation/: navmesh_implementation.md
docs/perf-baselines/cf1be81181cd3a28_rustc-1.92.0-nightly/astar_hard/: cross_plane_flood.json  cross_plane_found_pair.json
docs/perf-baselines/cf1be81181cd3a28_rustc-1.92.0-nightly/astar_incident/: bidir.json  bidir_gated_seeded.json  bidir_seeded_budgeted.json  uni.json
docs/perf-baselines/cf1be81181cd3a28_rustc-1.92.0-nightly/heuristic/: h_active_1k.json  select_active.json
docs/perf-baselines/cf1be81181cd3a28_rustc-1.92.0-nightly/provider_build/: engine_view_from_snapshot.json
navpath/: README.md  __init__.py  __main__.py  api.py  astar.py  cost.py  db.py  graph.py  nodes.py  options.py  path.py  requirements.py
rust/: Cache.md  Cargo.toml  README.md
rust/navpath-builder/: Cargo.toml
rust/navpath-builder/src/: main.rs
rust/navpath-builder/tests/: chains.rs
rust/navpath-core/: Cargo.toml
rust/navpath-core/benches/: astar.rs
rust/navpath-core/examples/: diff_bidir.rs  diff_canonical.rs  probe.rs  repro_pair.rs
rust/navpath-core/src/: astar.rs  cost.rs  funnel.rs  jps.rs  json.rs  lib.rs  models.rs  nodes.rs  options.rs
rust/navpath-core/src/db/: mod.rs  navmesh.rs  open.rs  queries.rs  rows.rs
rust/navpath-core/src/eligibility/: mod.rs
rust/navpath-core/src/engine/: bucket_queue.rs  canonical.rs  heuristics.rs  mod.rs  neighbors.rs  search.rs
rust/navpath-core/src/geometry/: wkb.rs
rust/navpath-core/src/graph/: chain_index.rs  mod.rs  movement.rs  navmesh_provider.rs  plane_cache.rs  provider.rs  touch_cache.rs
rust/navpath-core/src/snapshot/: manifest.rs  mod.rs  reader.rs  writer.rs
rust/navpath-core/tests/: eligibility.rs  jps_rollout.rs  navmesh_provider_integration.rs
rust/navpath-service/: .env  Cargo.toml  README.md
rust/navpath-service/docs/: cluster-aware-pathing-plan.md  hpa_only_refactor_plan.md  pathfinding_overview.md  teleport_next_node_chain.md
rust/navpath-service/examples/: payload_diff.rs  replay.rs
rust/navpath-service/src/: config.rs  db.rs  engine_adapter.rs  errors.rs  lib.rs  main.rs  models.rs  provider_manager.rs  requirements.rs  routes.rs  serialization.rs  state.rs
rust/navpath-service/src/planner/: cluster.rs  graph.rs  high_level.rs  hpa.rs  micro_astar.rs  mod.rs  path_blob.rs
rust/navpath-service/tests/: cluster_cache_test.rs  cluster_planner_test.rs  db_smoke_test.rs  graph_builder_test.rs  hpa_planner_test.rs  http_routes.rs  integration_find_path.rs  micro_astar_test.rs  path_blob_decoder_test.rs  serialization_test.rs
scripts/: perf-gate.sh
tools/: golden_corpus.json  invariance_check.sh  payload_baseline.json
(+88 files in other folders)
