[workspace]
members = [
    "navpath-core",
    "navpath-service",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rusqlite = "0.31"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
lru = "0.12"
indexmap = "2"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
lto = false

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
