[package]
name = "navpath-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

navpath-core = { path = "../navpath-core", features = ["builder"] }
serde_json = "1"
rayon = "1"
mimalloc = { version = "0.1", default-features = false }


