[package]
name = "navpath-core"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
byteorder = "1"
thiserror = "1"
blake3 = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
serde_json = "1"

[features]
default = []
builder = ["blake3"]

[[bench]]
name = "astar"
harness = false
