[package]
name = "navpath-core"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
byteorder = "1"
thiserror = "1"
blake3 = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
serde_json = "1"

[features]
default = []
builder = ["blake3"]
# Escape hatch for deliberately portable (baseline x86-64) builds; without it, building
# on x86_64 without -C target-cpu=native/x86-64-v3 is a compile error (see src/lib.rs).
allow-baseline-cpu = []

[[bench]]
name = "astar"
harness = false
