[package]
name = "navpath-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP service for navpath."

[dependencies]
navpath-core = { path = "../navpath-core" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
once_cell = "1"
anyhow = "1"
thiserror = "1"
