[package]
name = "navpath-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.31" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
